--- a/vignettes/Model_TTU.Rmd
+++ b/vignettes/Model_TTU.Rmd
@@ -7,10 +7,12 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+
 ```{r message=FALSE, warning=FALSE}
 library(TTU)
 ```
-## Set-up workspace and import data
+
+## Set-up workspace 
 To facilitate reproducibility, we begin by setting a seed.
 
 ```{r}
@@ -24,65 +26,32 @@ We next create a directory in which we will write all output.
 path_to_write_to_1L_chr <- "Output" 
 dir.create(path_to_write_to_1L_chr)
 ```
-We now specify the paths to the input data and its data dictionary. 
 
-```{r}
-path_to_inp_data_1L_chr <- "Data" 
-```
-As this is an illustrative example, neither the data directory nor the data files actually exist. So we are going to have to create both. To create our fake data files, we slightly trim down the replication dataset from the related [youthvars](https://ready4-dev.github.io/youthvars/) package and save it along with its dictionary to the "Data" directory.
+## Import and describe data
+As this is an illustrative example, our input data does not actually exist. So we are going to have to create a fake dataset.
 
-```{r warning = F}
-dir.create(path_to_inp_data_1L_chr)
-write.csv(youthvars::replication_popl_tb %>% 
-            youthvars::transform_raw_ds_for_analysis() %>%
-            dplyr::select(-BADS,-GAD7, -OASIS,-SCARED),"Data/data.csv", row.names=FALSE)
-write.csv(youthvars::make_tfd_repln_ds_dict_r3(),"Data/dictionary.csv", row.names=FALSE)
+```{r message=FALSE}
+data_tb <- make_fake_eq5d_ds()
 ```
 
-We read our data files into local memory.
+The dataset we are using has `r nrow(data_tb)` records on `r length(data_tb$uid %>% unique())` study participants. The first six records are reproduced below.
 
-```{r message = F}
-data_tb <- readr::read_csv("Data/data.csv") 
-dictionary_r3 <- readr::read_csv("Data/dictionary.csv") %>% ready4use::ready4_dictionary()
-```
-
-## Score utility and summarise meta-data
-We now convert study participant responses to the AQoL-6D questionnaire to health utility scores. 
-
-```{r message=FALSE, results='hide', warning=FALSE}
-scored_data_tb <- data_tb %>% youthvars::add_adol6d_scores() 
-```
-The dataset we are using has `r nrow(scored_data_tb)` records on `r length(scored_data_tb$fkClientID %>% unique())` study participants. The first six records are reproduced below.
-```{r }
-scored_data_tb %>%
+```{r inputds, eval = knitr::is_html_output(), results='asis'}
+data_tb %>%
     head() %>%
   ready4show::print_table(output_type_1L_chr = "HTML",
-                          caption_1L_chr = "Input dataset")
+                          caption_1L_chr = "Input dataset",
+                          mkdn_tbl_ref_1L_chr = "tab:inputds")
 ```
 
-We next create an object `ds_smry_ls` to store a description of some structural properties of the dataset such as:
-
- - the name of the dependent variable (ie total health utility score);
- - the names of the variables we will be exploring as candidate predictors and as candidate covariates in our modelling;
- - the names of the variables for unique participant identifier and data collection round; and
- - the value of the data collection round variable for the baseline timepoint.
+We next create a lookup table summarising key information about the variables from our dataset that we will explore as candidate predictors in our models. The predictors lookup table must be of the `TTU_predictors_lup` class.
 
 ```{r}
-ds_smry_ls <- list(candidate_predrs_chr = c("K6","PHQ9"),
-                   candidate_covar_nms_chr = c("d_sex_birth_s", "SOFAS", "c_p_diag_s", "c_clinical_staging_s", "d_age",  "d_sexual_ori_s", "d_country_bir_s", "d_relation_s", "d_studying_working"),
-                   depnt_var_nm_1L_chr = "aqol6d_total_w",
-                   id_var_nm_1L_chr = "fkClientID",
-                   round_var_nm_1L_chr = "round",
-                   round_bl_val_1L_chr = "Baseline")
-```
-
-We now create a lookup table with summary information (brief description, class, range of allowable values, factor by which it should be scaled in modelling) on candidate predictors and add this table to the  `ds_smry_ls` object.
-
-```{r}
-ds_smry_ls$predictors_lup <- TTU_predictors_lup(make_pt_TTU_predictors_lup(short_name_chr = ds_smry_ls$candidate_predrs_chr,
-                                              long_name_chr = c("K6 total score", "PHQ9 total score"),
-                                              min_val_dbl = 0,
-                                              max_val_dbl = c(24,27),
+predictors_lup <- TTU_predictors_lup(make_pt_TTU_predictors_lup(short_name_chr = c("k10_int","psych_well_int"),
+                                              long_name_chr = c("Kessler Psychological Distress - 10 Item Total Score",
+                                                   "Overall Wellbeing Measure (Winefield et al. 2012)"),
+                                              min_val_dbl = c(10,18),
+                                              max_val_dbl = c(50,90),
                                               class_chr = "integer",
                                               increment_dbl = 1,
                                               class_fn_chr = "integer",
@@ -90,8 +59,87 @@ ds_smry_ls$predictors_lup <- TTU_predictors_lup(make_pt_TTU_predictors_lup(short
                                               covariate_lgl = F))
 ```
 
+We also require a data dictionary for our input dataset. The dictionary must be of the `ready4use::ready4_dictionary` class. In the example below we are adapting an existing dictionary (gnerated by a call to the `youthvars::make_tfd_repln_ds_dict_r3` function) by dropping unnecessary entries and adding a number of additional records to it.
+
+```{r}
+dictionary_tb <- youthvars::make_final_rpln_ds_dict(youthvars::make_tfd_repln_ds_dict_r3() %>% dplyr::filter(var_nm_chr %in% names(data_tb)),
+                                   additions_tb = ready4use::make_pt_ready4_dictionary(var_nm_chr = c("uid", 
+                                                                                                      "Timepoint", "bl_data_collection_dtm",
+                                                                                                      "MO", "SC", "UA", "PD", "AD",
+                                                                                                      "EQ5D_total_dbl",
+                                                                                                      predictors_lup$short_name_chr),
+                                  var_ctg_chr = c("Identifier",
+                                                  rep("Temporal",2),
+                                                  rep("Multi-Attribute Utility Instrument Question",5),
+                                                  "Multi-Attribute Utility Instrument Score",
+                                                  rep("Clinical",2)),
+                                  var_desc_chr = c("Unique identifier",
+                                                   "Data collection round",
+                                                   "Date of baseline data collection",
+                                                   "EQ5D - Mobility Domain Score",
+                                                   "EQ5D - Self-Care Domain Score",
+                                                   "EQ5D - Usual Activities Domain Score",
+                                                   "EQ5D - Pain / Discomfort Domain Score",
+                                                   "EQ5D - Anxiety / Depression Domain Score",
+                                                   "EQ5d - Total weighted score",
+                                                   predictors_lup$long_name_chr),
+                                  var_type_chr = c("integer",
+                                                   "character","date",
+                                                   rep("integer",5),
+                                                   "double",
+                                                   predictors_lup$class_chr
+                                                   ))) %>%
+  dplyr::arrange(var_ctg_chr)
+
+```
+
+## Score utility and summarise meta-data
+We now convert study participant responses to the EQ-5D questionnaire to health utility scores. We do this using the `eq5d` package.
+
+```{r message=FALSE, results='hide', warning=FALSE}
+data_tb <- data_tb %>% 
+  dplyr::mutate(EQ5D_total_dbl = eq5d::eq5d(., country="UK", version = "5L", type = "CW")) 
+```
+
+We can label dataset variables using descriptions from the data dictionary.
+
+```{r}
+data_tb <- data_tb %>%
+  ready4use::add_labels_from_dictionary(dictionary_tb = dictionary_tb,
+                                        remove_old_lbls_1L_lgl = T) 
+```
+
+The first six records of the scored and labelled dataset are reproduced below.
+
+```{r scoredds, eval = knitr::is_html_output(), results='asis'}
+data_tb %>%
+    head() %>%
+  ready4show::print_table(output_type_1L_chr = "HTML",
+                          caption_1L_chr = "Scored and labelled dataset",
+                          use_lbls_as_col_nms_1L_lgl = T,
+                          mkdn_tbl_ref_1L_chr = "tab:scoredds")
+```
+
+We next create an object `ds_smry_ls` to store a description of some structural properties of the dataset such as:
+
+ - the name of the dependent variable (ie total health utility score);
+ - the names of the variables we will be exploring as candidate predictors and as candidate covariates in our modelling;
+ - the candidate predictors look-up table that we previously created;
+ - the names of the variables for unique participant identifier and data collection round; and
+ - the value of the data collection round variable for the baseline timepoint.
+
+```{r}
+ds_smry_ls <- list(candidate_predrs_chr = predictors_lup$short_name_chr,
+                   candidate_covar_nms_chr = c("d_sex_birth_s", "d_age",  "d_sexual_ori_s", "d_relation_s", "d_studying_working"),
+                   depnt_var_nm_1L_chr = "EQ5D_total_dbl",
+                   id_var_nm_1L_chr = "uid",
+                   round_var_nm_1L_chr = "Timepoint",
+                   round_bl_val_1L_chr = "BL",
+                   predictors_lup = predictors_lup)
+```
+
 ## Test candidate models, predictors and covariates
-Our first main task is to test which models, predictors and covariates perform best. This tasks can be broken down into the following steps.
+Our first analytic task is to test which models, predictors and covariates perform best. This tasks can be broken down into the following steps.
 
 ### Preliminary tasks
 We begin by creating another lookup table (or as in the below example, use an existing lookup table) with summary information about the types of models we might test.
@@ -113,7 +161,7 @@ mdl_smry_ls <- list(mdl_types_lup = mdl_types_lup,
 For the initial set of tests on candidate models, we just need data from one timepoint as we are not exploring longitudinal change at this stage. We also only need data on the candidate predictors and total utility score. so can slim down our dataset to these parameters.
 
 ```{r}
-bl_tb <- youthvars::transform_ds_for_tstng(scored_data_tb, 
+bl_tb <- youthvars::transform_ds_for_tstng(data_tb, 
                                 depnt_var_nm_1L_chr = ds_smry_ls$depnt_var_nm_1L_chr,
                                 candidate_predrs_chr = ds_smry_ls$candidate_predrs_chr,
                                 dep_var_max_val_1L_dbl = 0.999,
@@ -131,6 +179,7 @@ bl_tb %>%
                           caption_1L_chr = "Slimmed down prediction dataset")
   
 ```
+
 ### Identify most highly correlated candidate predictor
 By exploring correlations in the slimmed down dataset, we can reorder our vector of candidate predictors to reflect the descending order of correlation with the dependent variable. 
 
@@ -146,20 +195,15 @@ mdl_smry_ls$predr_var_nm_1L_chr <- ds_smry_ls$candidate_predrs_chr[1]
 mdl_smry_ls$predr_var_desc_1L_chr <- ds_smry_ls$predictors_lup %>% ready4fun::get_from_lup_obj(match_value_xx = mdl_smry_ls$predr_var_nm_1L_chr, match_var_nm_1L_chr = "short_name_chr", target_var_nm_1L_chr = "long_name_chr",
         evaluate_lgl = F)
 ```
-```{r}
-mdl_smry_ls$predr_var_desc_1L_chr
-```
-### Test all candidate models using preferred single predictor
-Using the metadata from the predictors lookup table, we now create a vector of the range of potential integer values of the most highly correlated predictor.
+
+### Test all candidate models using most correlated predictor
+Using the metadata from the predictors lookup table, we now create a vector of the range of potential integer values of the most highly correlated candidate predictor (in this example, `r mdl_smry_ls$predr_var_desc_1L_chr`).
 
 ```{r}
 mdl_smry_ls$predr_vals_dbl <- make_predr_vals(mdl_smry_ls$predr_var_nm_1L_chr, candidate_predrs_lup = ds_smry_ls$predictors_lup)
 ```
 
-```{r}
-mdl_smry_ls$predr_vals_dbl
-```
-We now compare all candidate model types, each using only the highest correlated candidate predictor (`r mdl_smry_ls$predr_var_desc_1L_chr`). 
+We now compare all candidate model types, each using only the highest correlated candidate predictor. 
 
 ```{r warning = FALSE, message=FALSE}
 mdl_smry_ls$folds_1L_int <- 10L
@@ -168,20 +212,12 @@ mdl_smry_ls$smry_of_sngl_predr_mdls_tb <- write_sngl_predr_multi_mdls_outps(data
         depnt_var_nm_1L_chr = ds_smry_ls$depnt_var_nm_1L_chr, predr_var_nm_1L_chr = mdl_smry_ls$predr_var_nm_1L_chr,
         predr_var_desc_1L_chr = mdl_smry_ls$predr_var_desc_1L_chr, 
         predr_vals_dbl = mdl_smry_ls$predr_vals_dbl,
-        path_to_write_to_1L_chr = path_to_write_to_1L_chr, new_dir_nm_1L_chr =  "A_Candidate_Mdls_Cmprsn",
+        path_to_write_to_1L_chr = path_to_write_to_1L_chr, new_dir_nm_1L_chr =  "A_Candidate_Mdls_Cmprsn", start_1L_chr = NA_character_,
         mdl_types_lup = mdl_smry_ls$mdl_types_lup,
-        dictionary_tb = youthvars::make_final_rpln_ds_dict()) 
-
+        dictionary_tb = dictionary_tb) 
 ```
 
 The `write_sngl_predr_multi_mdls_outps` function will write each model to be tested to a new sub-directory of "`r path_to_write_to_1L_chr`" called "A_Candidate_Mdls_Cmprsn". Also written to that sub-directory are a number of plots for each model. 
-
-```{r include=F, eval=F, out.width = "400px"}
-# The plots for the first model we test (
-# `r mdl_smry_ls$mdl_types_lup %>% ready4fun::get_from_lup_obj(target_var_nm_1L_chr = "long_name_chr",match_value_xx = "OLS_NTF", match_var_nm_1L_chr = "short_name_chr", evaluate_lgl = F)`) are reproduced below.
-paste0(path_to_write_to_1L_chr,"/","A_Candidate_Mdls_Cmprsn") %>% list.files(pattern = "\\.png$", full.names = T) %>% purrr::keep(stringr::str_detect(.,"OLS_NTF")) %>%
-knitr::include_graphics()
-```
 
 The `write_sngl_predr_multi_mdls_outps` function also outputs a table summarising the performance of each of the candidate models.
 
@@ -197,6 +233,7 @@ We can now identify the highest performing model in each category of candidate m
 mdl_smry_ls$prefd_mdl_types_chr <- make_prefd_mdls_vec(mdl_smry_ls$smry_of_sngl_predr_mdls_tb,
                                            choose_from_pfx_chr = mdl_smry_ls$choose_from_pfx_chr)
 ```
+
 ```{r}
 mdl_smry_ls$prefd_mdl_types_chr
 ```
@@ -221,11 +258,6 @@ mdl_smry_ls$predr_cmprsn_tb <- write_predr_cmprsn_outps(data_tb = bl_tb,
 
 The previous call to the `write_predr_cmprsn_outps`{.R} function saved the tested models along with model plots in the "B_Candidate_Predrs_Cmprsn" sub-directory of "Output".
 
-```{r include=F, eval=F, out.width = "400px"}
-paste0(path_to_write_to_1L_chr,"/","B_Candidate_Predrs_Cmprsn") %>% list.files(pattern = "\\.png$", full.names = T) %>%
-knitr::include_graphics()
-```
-
 These results are also viewable as a table.
 
 ```{r}
@@ -233,25 +265,19 @@ mdl_smry_ls$predr_cmprsn_tb %>%
     ready4show::print_table(output_type_1L_chr = "HTML",
                           caption_1L_chr = "Comparison of all candidate predictors using preferred model")
 ```
+
 ### Compare single predictor model performance across all candidate predictors
 Now, we compare the performance of single predictor models of our preferred model type (in our case, a `r mdl_smry_ls$mdl_types_lup %>% ready4fun::get_from_lup_obj(target_var_nm_1L_chr = "long_name_chr",match_value_xx = mdl_smry_ls$prefd_mdl_types_chr[1], match_var_nm_1L_chr = "short_name_chr", evaluate_lgl = F)`) for each candidate predictor.
 
 ```{r message=FALSE, warning=F}
     mdl_smry_ls$smry_of_mdl_sngl_predrs_tb <- write_mdl_type_multi_outps(data_tb = bl_tb,
-        folds_1L_int = mdl_smry_ls$folds_1L_int, predrs_var_nms_chr = mdl_smry_ls$predr_cmprsn_tb$predr_chr,
+        folds_1L_int = mdl_smry_ls$folds_1L_int, predrs_var_nms_chr = mdl_smry_ls$predr_cmprsn_tb$predr_chr, start_1L_chr = NA_character_,
         mdl_type_1L_chr = mdl_smry_ls$prefd_mdl_types_chr[1], depnt_var_nm_1L_chr = ds_smry_ls$depnt_var_nm_1L_chr,
         path_to_write_to_1L_chr = path_to_write_to_1L_chr, new_dir_nm_1L_chr = "C_Predrs_Sngl_Mdl_Cmprsn",
         fl_nm_pfx_1L_chr = "C_PREDR", mdl_types_lup = mdl_smry_ls$mdl_types_lup) 
 ```
-The previous call to the `write_mdl_type_multi_outps`{.R} function saves the tested models along with the two plots for each model in the "C_Predrs_Sngl_Mdl_Cmprsn" sub-directory of "Output". 
 
-```{r include=F, eval=F, out.width = "400px"}
-# The plots for the model using the best performing predictor (`r mdl_smry_ls$predr_var_desc_1L_chr`) are
-# reproduced below. 
-paste0(path_to_write_to_1L_chr,"/","C_Predrs_Sngl_Mdl_Cmprsn") %>% list.files(pattern = "\\.png$", full.names = T) %>%
-  purrr::keep(stringr::str_detect(.,paste0("_",mdl_smry_ls$predr_var_nm_1L_chr,"_"))) %>%
-knitr::include_graphics()
-```
+The previous call to the `write_mdl_type_multi_outps`{.R} function saves the tested models along with the two plots for each model in the "C_Predrs_Sngl_Mdl_Cmprsn" sub-directory of "Output". 
 
 The performance of each single predictor model can also be summarised in a table.
 
@@ -260,19 +286,20 @@ mdl_smry_ls$smry_of_mdl_sngl_predrs_tb %>%
     ready4show::print_table(output_type_1L_chr = "HTML",
                           caption_1L_chr = "Preferred single predictor model performance by candidate predictor")
 ```
+
 ### Compare candidate covariates
 We rerun each of the models from the previous step, but this time add all our candidate covariates to each model. 
 
 ```{r}
-bl_tb <- scored_data_tb %>% youthvars::transform_ds_for_tstng(candidate_predrs_chr = ds_smry_ls$candidate_predrs_chr,
-        covar_var_nms_chr = ds_smry_ls$candidate_covar_nms_chr, remove_all_msng_1L_lgl = T,
+bl_tb <- data_tb %>% youthvars::transform_ds_for_tstng(depnt_var_nm_1L_chr = ds_smry_ls$depnt_var_nm_1L_chr,candidate_predrs_chr = ds_smry_ls$candidate_predrs_chr,
+        covar_var_nms_chr = ds_smry_ls$candidate_covar_nms_chr, remove_all_msng_1L_lgl = T, round_var_nm_1L_chr = ds_smry_ls$round_var_nm_1L_chr,
         round_val_1L_chr = ds_smry_ls$round_bl_val_1L_chr)
 mdl_smry_ls$mdls_with_covars_smry_tb <- write_mdl_type_covars_mdls(bl_tb,
         depnt_var_nm_1L_chr = ds_smry_ls$depnt_var_nm_1L_chr, predrs_var_nms_chr = ds_smry_ls$candidate_predrs_chr,
         covar_var_nms_chr = ds_smry_ls$candidate_covar_nms_chr, mdl_type_1L_chr = mdl_smry_ls$prefd_mdl_types_chr[1],
         path_to_write_to_1L_chr = path_to_write_to_1L_chr, new_dir_nm_1L_chr = "D_Predr_Covars_Cmprsn",
         fl_nm_pfx_1L_chr = "D_CT",
-        mdl_types_lup = mdl_smry_ls$mdl_types_lup)
+        mdl_types_lup = mdl_smry_ls$mdl_types_lup, start_1L_chr = NA_character_)
 ```
 
 The updated models are saved to the "D_Predr_Covars_Cmprsn" subdirectory of "Output" and we can summarise the performance of each of the updated models, along with all model terms, in a table.
@@ -280,20 +307,20 @@ The updated models are saved to the "D_Predr_Covars_Cmprsn" subdirectory of "Out
 ```{r}
 mdl_smry_ls$mdls_with_covars_smry_tb %>%
     ready4show::print_table(output_type_1L_chr = "HTML",
-                          caption_1L_chr = "Preferred performance of models with covariate predictors by candidate predictor", 
+                            caption_1L_chr = "Preferred performance of models with covariate predictors by candidate predictor", 
                           use_lbls_as_col_nms_1L_lgl = T)
 ```
-We can now identify which covariates are significant predictors in any of the models.
+
+We can now identify which, if any, of the candidate covariates we previously specified are significant predictors in any of the models.
 
 ```{r}
 mdl_smry_ls$signt_covars_chr <- get_signft_covars(mdls_with_covars_smry_tb = mdl_smry_ls$mdls_with_covars_smry_tb,
                                       covar_var_nms_chr = ds_smry_ls$candidate_covar_nms_chr) 
-# NOTE: THIS FUNCTION NEEDS UPDATING TO WORK FOR CATEGORICAL VARS
 ```
 ```{r}
 mdl_smry_ls$signt_covars_chr
 ```
-We can override the covariates to select, potentially because we want to select only covariates that are significant for all or most of the models. However, in the below example we have opted not to do so and continue to use the significant predictor (`r mdl_smry_ls$signt_covars_chr`) selected by the algorithm in the previous step.
+We can override the covariates to select, potentially because we want to select only covariates that are significant for all or most of the models. However, in the below example we have opted not to do so and continue to use `r ifelse(is.na(mdl_smry_ls$signt_covars_chr),"no covariates"," "mdl_smry_ls$signt_covars_chr %>% paste0(, collapse = "and ")"` as selected by the algorithm in the previous step.
 
 ```{r}
 mdl_smry_ls$prefd_covars_chr <- NA_character_
@@ -310,18 +337,10 @@ We now conclude our model testing by rerunning the previous step, except confini
         covar_var_nms_chr = mdl_smry_ls$prefd_covars_chr, mdl_type_1L_chr = mdl_smry_ls$prefd_mdl_types_chr[1],
         depnt_var_nm_1L_chr = ds_smry_ls$depnt_var_nm_1L_chr, path_to_write_to_1L_chr = path_to_write_to_1L_chr,
         new_dir_nm_1L_chr = "E_Predrs_W_Covars_Sngl_Mdl_Cmprsn", mdl_types_lup = mdl_smry_ls$mdl_types_lup, fl_nm_pfx_1L_chr = "E_CK_CV")
-
 ```
 
 The previous call to the `write_mdl_type_multi_outps`{.R} function saves the tested models along with the two plots for each model in the "E_Predrs_W_Covars_Sngl_Mdl_Cmprsn" sub-directory of "Output". 
 
-```{r include=F, eval=F, out.width = "400px"}
-# The plots for the model using the best performing predictor (`r mdl_smry_ls$predr_var_desc_1L_chr`) are
-# reproduced below. 
-paste0(path_to_write_to_1L_chr,"/","E_Predrs_W_Covars_Sngl_Mdl_Cmprsn") %>% list.files(pattern = "\\.png$", full.names = T) %>%
-  purrr::keep(stringr::str_detect(.,paste0("_",mdl_smry_ls$predr_var_nm_1L_chr,"_"))) %>%
-knitr::include_graphics()
-```
 
 ## Apply preferred model types and predictors to time series data
 The next main step is to use the preferred model types and covariates identified from the preceding analysis of cross-sectional data in time series analysis. 
@@ -337,6 +356,7 @@ First we summarise the combinations of model types, candidate predictors and cov
 ```{r}
 mdl_smry_ls$mdl_nms_ls <- make_mdl_nms_ls(mdl_smry_ls$predr_vars_nms_ls, mdl_types_chr = mdl_smry_ls$prefd_mdl_types_chr)
 ```
+
 ```{r}
 mdl_smry_ls$mdl_nms_ls %>% purrr::flatten_chr()
 ```
@@ -344,7 +364,7 @@ mdl_smry_ls$mdl_nms_ls %>% purrr::flatten_chr()
 We now create a composite object `outp_smry_ls` that contains the key input and output data used in testing models, predictors and covariates that we will need for the time series modelling.
 
 ```{r}
-outp_smry_ls <- list(scored_data_tb = scored_data_tb, 
+outp_smry_ls <- list(scored_data_tb = data_tb, 
                      smry_of_sngl_predr_mdls_tb = mdl_smry_ls$smry_of_sngl_predr_mdls_tb,
                      prefd_mdl_types_chr = mdl_smry_ls$prefd_mdl_types_chr, 
                      predr_cmprsn_tb = mdl_smry_ls$predr_cmprsn_tb,
@@ -365,52 +385,41 @@ outp_smry_ls <- list(scored_data_tb = scored_data_tb,
                      mdl_types_lup = mdl_smry_ls$mdl_types_lup, 
                      file_paths_chr = list.files(path_to_write_to_1L_chr, recursive = T))
 ```
-### Time series modelling
-Next we test each of the `r length(mdl_smry_ls$mdl_nms_ls %>% purrr::flatten_chr())` time series models we specified in the previous step. For this goal, we use the `write_ts_mdls_from_alg_outp`{.R} function that makes a call to the Stan program. This function requires that you have the `cmdstanr` package installed on your machine and have performed the necessary configuration of that package - refer to [https://mc-stan.org/cmdstanr/](https://mc-stan.org/cmdstanr/) for details.
 
-Note that for this example we have run only 500 iterations - in practice this number would likely be several times higher. A limitation of the current version of the `write_ts_mdls_from_alg_outp` function is that it only works with the following two model types: 
+### Time series modelling
+Next we test each of the `r length(mdl_smry_ls$mdl_nms_ls %>% purrr::flatten_chr())` time series models we specified in the previous step. Note the current version of the `write_ts_mdls_from_alg_outp` function only works with the two model types that we recommend for TTU modelling: 
 
 - `r mdl_smry_ls$mdl_types_lup %>% ready4fun::get_from_lup_obj(target_var_nm_1L_chr = "long_name_chr",match_value_xx = mdl_smry_ls$prefd_mdl_types_chr[1], match_var_nm_1L_chr = "short_name_chr", evaluate_lgl = F)`
 - `r mdl_smry_ls$mdl_types_lup %>% ready4fun::get_from_lup_obj(target_var_nm_1L_chr = "long_name_chr",match_value_xx = mdl_smry_ls$prefd_mdl_types_chr[2], match_var_nm_1L_chr = "short_name_chr", evaluate_lgl = F)`
 
-We aim to address this limitation in future releases of TTU.
+However, as there is some potential utility in allowing users to explore less suitable model types, we may address this limitation in future releases of TTU.
 
 ```{r eval = F}
 outp_smry_ls <- write_ts_mdls_from_alg_outp(outp_smry_ls,
                                             fn_ls = list(fit_gsn_log_lnk,fit_clg_log_tfmn),
+                                            predictors_lup = predictors_lup ,
                                             backend_1L_chr = "cmdstanr",
                                             new_dir_nm_1L_chr = "F_TS_Mdls",
-                                            iters_1L_int = 500L)
+                                            iters_1L_int = 4000L)
 ```
 
 The `write_ts_mdls_from_alg_outp`{.R} function writes the models it tests to the "F_TS_Mdls" sub-directory of "Output" along with three plots for each model. 
 
-```{r include=F, eval=F, out.width = "400px"}
-# The three plots for the first model tested (`r mdl_smry_ls$mdl_nms_ls %>% purrr::flatten_chr() %>% `[`(1) `) are reproduced below.
-paste0(path_to_write_to_1L_chr,"/","F_TS_Mdls") %>% list.files(pattern = "\\.png$", full.names = T) %>%
-  purrr::keep(stringr::str_detect(.,paste0(mdl_smry_ls$mdl_nms_ls %>% purrr::flatten_chr() %>% `[`(1)))) %>%
-knitr::include_graphics()
-```
-
 ### Sharing models
-It may not be appropriate to share the raw models outputted by `write_ts_mdls_from_alg_outp`{.R} as they both may contain confidential data and are very large in file size. We therefore create shareable versions that are relatively small in file size and do not contain the source dataset, but that have the coefficients from the original models. 
+The raw models outputted by `write_ts_mdls_from_alg_outp`{.R} are not suitable for sharing as they both may contain confidential data and are very large in file size. An additional step is required to create shareable versions that are of more modest file size and have the source dataset replaced with synthetic data, but that are otherwise identical to the original models. 
 
-If you have a Dataverse account you can add details for your account (which will differ from the ones we use for ours below) to the `outp_smry_ls` object. If you do not have  a Dataverse account, do not add a dv_ls list element (or set it to its default value of NULL). 
+As we are not sharing the output of this example in an online data repository, we set the `dv_ls` element of the `outp_smry_ls` object to NULL. 
 
 ```{r eval=FALSE}
-outp_smry_ls$dv_ls <- list(dv_nm_1L_chr = "firstbounce",
-                               ds_url_1L_chr = "https://doi.org/10.7910/DVN/JC6PTV", 
-                               parent_dv_dir_1L_chr = "../../../../Data/Dataverse")
+outp_smry_ls$dv_ls <- NULL
 ```
-This following call to `write_shareable_mdls`{.R} writes shareable models to a new subdirectory (G_Shareable) of "Output". If you added details of a Dataverse account in the previous step the function will also push these shareable models to your Dataverse online data repository.
+
+This following call to `write_shareable_mdls`{.R} writes shareable models to a new subdirectory (G_Shareable) of "Output". 
 
 ```{r eval=F}
 outp_smry_ls <- write_shareable_mdls(outp_smry_ls,
-                                     new_dir_nm_1L_chr = "G_Shareable",
-                                     shareable_title_detail_1L_chr = "The model that can be used to predict adolescent AQoL6D. Note this model is a placeholder as it has been estimated from synthetic data.")
+                                     new_dir_nm_1L_chr = "G_Shareable")
 ```
-
-The files created in the following step are available here: https://doi.org/10.7910/DVN/JC6PTV
 
 ## Create shareable population data
 
