--- a/inst/Markdown/_Import_Data.Rmd
+++ b/inst/Markdown/_Import_Data.Rmd
@@ -8,7 +8,7 @@ output: html_document
 ```{r echo = !is.null(params_ls$ds_tb), eval = !is.null(params_ls$raw_ds_tfmn_fn), message = F}
 data_tb <- params_ls$ds_tb
 ```
-```{r echo = is.null(params_ls$ds_tb), eval = is.null(params_ls$raw_ds_tfmn_fn), message = F}
+```{r echo = is.null(params_ls$ds_tb), eval = is.null(params_ls$ds_tb), message = F}
 data_tb <- readRDS(here::here(paths_ls$path_to_data_from_top_level_chr %>%
                                 purrr::map(~.x)))
 ```
