--- a/data-raw/inst/Markdown/_Import_Data.Rmd
+++ b/data-raw/inst/Markdown/_Import_Data.Rmd
@@ -12,10 +12,8 @@ data_tb <- params_ls$ds_tb
 data_tb <- readRDS(here::here(paths_ls$path_to_data_from_top_level_chr %>%
                                 purrr::map(~.x)))
 ```
-```{r echo = !is.null(params_ls$raw_ds_tfmn_fn)}
-if(!is.null(params_ls$raw_ds_tfmn_fn)){
-  data_tb <- rlang::exec(params_ls$raw_ds_tfmn_fn, data_tb)
-}
+```{r echo = !is.null(params_ls$raw_ds_tfmn_fn), eval = !is.null(params_ls$raw_ds_tfmn_fn)}
+data_tb <- rlang::exec(params_ls$raw_ds_tfmn_fn, data_tb)
 ```
 
 
